syntax = "proto3";

package schema;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/seal-io/meta/api/schema";

message ComplianceLicense {
  // primary key
  string namespace = 1;
  string name = 2;

  // management
  google.protobuf.Timestamp create_time = 11;
  google.protobuf.Timestamp update_time = 12;
  optional google.protobuf.Timestamp deprecate_time = 13;
  repeated string tags = 14;

  // information
  string code = 21;
  string description = 22;
  repeated string references = 23;
  string text = 24;
  string standard_header = 25;
  string comments = 26;

  // extension
  optional bytes specific = 101;
}

message ComplianceLicenses {
  repeated ComplianceLicense items = 1;
}

message ComplianceLicenseTag {
  // primary key
  string name = 1;

  // management
  google.protobuf.Timestamp create_time = 11;
  google.protobuf.Timestamp update_time = 12;
  optional google.protobuf.Timestamp deprecate_time = 13;

  // information
  string description = 21;
  repeated string references = 22;
  string category = 23;

  // extension
  optional bytes specific = 101;
}

message ComplianceLicenseTags {
  repeated ComplianceLicenseTag items = 1;
}

message WeaknessVulnerability {
  // primary key
  string namespace = 1;
  string name = 2;
  string purl = 3;

  // management
  google.protobuf.Timestamp create_time = 11;
  google.protobuf.Timestamp update_time = 12;
  optional google.protobuf.Timestamp deprecate_time = 13;
  repeated string tags = 14;
  string purl_fuzzy = 15;

  // information
  string code = 21;
  string description = 22;
  repeated string references = 23;
  string summary = 24;
  string mitigation = 25;
  string exploitation = 26;
  string affected = 27;
  repeated string patched = 28;
  bytes cvss = 29;
  repeated string cwes = 30;
  bytes epss = 31;
  google.protobuf.Timestamp published = 32;
  google.protobuf.Timestamp modified = 33;

  // extension
  optional bytes specific = 101;
}

message WeaknessVulnerabilities {
  repeated WeaknessVulnerability items = 1;
}

message WeaknessVulnerabilityTag {
  // primary key
  string name = 1;

  // management
  google.protobuf.Timestamp create_time = 11;
  google.protobuf.Timestamp update_time = 12;
  optional google.protobuf.Timestamp deprecate_time = 13;

  // information
  string description = 21;
  repeated string references = 22;
  repeated string exploits = 30;
  string category = 23;
  bytes cvsses = 24;
  repeated string cwes = 25;
  bytes cpes = 26;
  bytes epsses = 27;
  google.protobuf.Timestamp published = 28;
  google.protobuf.Timestamp modified = 29;

  // extension
  optional bytes specific = 101;
}

message WeaknessVulnerabilityTags {
  repeated WeaknessVulnerabilityTag items = 1;
}

message WeaknessVulnerabilityFeature {
  // primary key
  string name = 1;

  // management
  google.protobuf.Timestamp create_time = 11;
  google.protobuf.Timestamp update_time = 12;
  optional google.protobuf.Timestamp deprecate_time = 13;

  // information
  string description = 21;
  string type = 22;
  optional bytes value = 23;
  bool disabled = 24;
}

message WeaknessVulnerabilityFeatures {
  repeated WeaknessVulnerabilityFeature items = 1;
}

enum DatasetIngestRequestType {
  Compliance_License_Tag = 0;
  Compliance_License = 1;
  Weakness_Vulnerability_Tag = 2;
  Weakness_Vulnerability = 3;
  Weakness_Vulnerability_Feature = 4;
}

message DatasetIngestRequest {
  // continuation
  int32 window = 1; // start from 0
  optional int32 window_size = 2;

  // condition
  DatasetIngestRequestType type = 11;
  optional google.protobuf.Timestamp since = 12;
}

message DatasetIngestResponse{
  // continuation
  optional int32 next_window = 1;
  int32 window_size = 2;

  // result
  oneof body {
    ComplianceLicenses compliance_licenses = 11;
    ComplianceLicenseTags compliance_license_tags = 12;
    WeaknessVulnerabilities weakness_vulnerabilities = 13;
    WeaknessVulnerabilityTags weakness_vulnerability_tags = 14;
    WeaknessVulnerabilityFeatures weakness_vulnerability_features = 15;
  }
}

service DatasetService {
  rpc Ingest(stream DatasetIngestRequest) returns (stream DatasetIngestResponse) {}
}